# at-spi2-core

./: Makefile.am  configure.ac  meson.build
atspi/: Makefile.am  atspi-accessible-private.h  atspi-accessible.c  atspi-action.c  atspi-application-private.h  atspi-application.c  atspi-application.h  atspi-collection.c  atspi-component.c  atspi-dbus.c  atspi-device-listener-private.h  atspi-device-listener.c  atspi-document.c  atspi-editabletext.c  atspi-event-listener-private.h  atspi-event-listener.c  atspi-gmain.c  atspi-gmain.h  atspi-hyperlink.c  atspi-hypertext.c  atspi-image.c  atspi-matchrule-private.h  atspi-matchrule.c  atspi-misc-private.h  atspi-misc.c  atspi-private.h  atspi-registry.c  atspi-relation.c  atspi-relation.h  atspi-selection.c  atspi-stateset.c  atspi-table-cell.c  atspi-table.c  atspi-text.c  atspi-value.c  meson.build
bus/: at-spi-bus-launcher.c
registryd/: Makefile.am  de-marshaller.c  de-marshaller.h  de-types.h  deviceeventcontroller-x11.c  deviceeventcontroller.c  deviceeventcontroller.h  meson.build  registry-main.c  registry.c  registry.h  testregistry.py
xml/: Accessible.xml  Application.xml  Cache.xml  Collection.xml  DeviceEventController.xml  DeviceEventListener.xml  Makefile.am  Registry.xml  TableCell.xml
